# kaigents

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  index.html  mkdocs.yml  sitemap.xml  smoke-test-run.yaml  smoke-test.yaml  start_here.md
.github/workflows/: gh-pages.yml
CODING_STANDARDS_AND_DOD/: index.html
architecture/ai_agent_engine_architecture/: index.html
architecture/kaigents-architecture-and-design/: index.html
charts/kaigents-operator/: Chart.yaml  values.yaml
charts/kaigents-operator/crds/: core.kaigents.io_agents.yaml  core.kaigents.io_mcpservers.yaml  core.kaigents.io_modelendpoints.yaml  core.kaigents.io_processes.yaml  core.kaigents.io_runs.yaml  core.kaigents.io_tasks.yaml  core.kaigents.io_teams.yaml  core.kaigents.io_tools.yaml
charts/kaigents-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  runner-serviceaccount.yaml  serviceaccount.yaml  user-clusterroles.yaml
dashboard/: go.mod  go.sum
dashboard/cmd/kaigents-dashboard/: main.go
dashboard/internal/artifacts/: proxy.go
dashboard/internal/server/: server.go
deploy/grafana/dashboards/: kaigents-overview.json
deploy/temporal/: minimal-values.yaml  temporal-db.yaml  temporal.values.yaml
design/ai_agents_project_design/: index.html
devops/Equipo Nivel/: index.html
devops/Team Design/: index.html
docs/: CODING_STANDARDS_AND_DOD.md  implementation-plan.md  replace-envoy-with-envoy.md
docs/architecture/: ai_agent_engine_architecture.md  kaigents-architecture-and-design.md
docs/design/: ai_agents_project_design.md
docs/devops/: Equipo Nivel.md  Team Design.md
docs/getting-started/: example-team.md  index.md  installation.md  observability.md  temporal-validation.md
docs/implementation/: kaigents-implementation-tracker.md
docs/ops/: temporal-installation.md
docs/product/: domain-model.md  kaigents-introduction.md  kaigents-prd.md  kairon-retail-managed-service.md  managed-services.md
docs/research/: ai_agent_platform_analysis.md  ai_hardware_design_agents.md  ai_java_engineer_agent.md  ciso-toolkit.md  code_llm_alternatives.md  competitive-analysis.md  crewai_overview.md  deepseek_coder_amd_optimization.md  deepseek_coder_overview.md  fine_tuning_overview.md  flm_npu_ubuntu_25_04_setup.md  llm_models_overview.md  platform_landscape_matrix.md  platform_research_log.md  rag_overview.md  wizardcoder_amd_ai370_cluster_optimization.md  wizardcoder_amd_optimization.md
docs/research/technology/: itd-register.md  oss-components-commercially-permissible.md  process-engine-evaluation.md  temporal-poc.md
docs/strategy/: administrative_operations_ai_strategy.md  ai_engineering_team_strategy.md  business_operations_ai_strategy.md  corporate_ai_strategy.md  data_science_ai_strategy.md  governance_ai_strategy.md  marketing_ai_agent_strategy.md  product_management_ai_strategy.md  sales_agent_strategy.md  security_operations_ai_strategy.md  technical_support_agent_strategy.md
engine/: Cargo.toml  Dockerfile.runner
engine/crates/kaigents-cli/: Cargo.toml
engine/crates/kaigents-cli/src/: main.rs
engine/crates/kaigents-core/: Cargo.toml
engine/crates/kaigents-core/src/: artifacts.rs  dag.rs  file_backed.rs  lib.rs  logging.rs  metrics.rs  model_serving.rs  resources.rs  rethinkdb_store.rs  run_id.rs  s3_store.rs  temporal_adapter.rs  timeline.rs  tool_plane.rs
getting-started/: index.html
getting-started/example-team/: index.html
getting-started/installation/: index.html
getting-started/observability/: index.html
getting-started/temporal-validation/: index.html
implementation-plan/: index.html
implementation/kaigents-implementation-tracker/: index.html
operator/: Dockerfile  go.mod  go.sum
operator/cmd/kaigents-operator/: main.go
operator/internal/controllers/: agent_controller.go  common.go  mcpserver_controller.go  modelendpoint_controller.go  reconcile_test.go  run_controller.go  setup.go  team_controller.go  tool_controller.go
operator/internal/version/: version.go  version_test.go
operator/manifests/crds/: core.kaigents.io_agents.yaml  core.kaigents.io_mcpservers.yaml  core.kaigents.io_modelendpoints.yaml  core.kaigents.io_runs.yaml  core.kaigents.io_teams.yaml  (+1 more)
ops/temporal-installation/: index.html
product/domain-model/: index.html
product/kaigents-introduction/: index.html
product/kaigents-prd/: index.html
product/kairon-retail-managed-service/: index.html
product/managed-services/: index.html
replace-envoy-with-envoy/: index.html
research/ai_agent_platform_analysis/: index.html
research/ai_hardware_design_agents/: index.html
research/ai_java_engineer_agent/: index.html
research/ciso-toolkit/: index.html
research/code_llm_alternatives/: index.html
research/competitive-analysis/: index.html
research/crewai_overview/: index.html
research/deepseek_coder_amd_optimization/: index.html
research/deepseek_coder_overview/: index.html
research/fine_tuning_overview/: index.html
research/flm_npu_ubuntu_25_04_setup/: index.html
research/llm_models_overview/: index.html
research/platform_landscape_matrix/: index.html
research/platform_research_log/: index.html
research/rag_overview/: index.html
research/wizardcoder_amd_ai370_cluster_optimization/: index.html
research/wizardcoder_amd_optimization/: index.html
search/: search_index.json
strategy/administrative_operations_ai_strategy/: index.html
strategy/ai_engineering_team_strategy/: index.html
strategy/business_operations_ai_strategy/: index.html
strategy/corporate_ai_strategy/: index.html
strategy/data_science_ai_strategy/: index.html
strategy/governance_ai_strategy/: index.html
strategy/marketing_ai_agent_strategy/: index.html
strategy/product_management_ai_strategy/: index.html
strategy/sales_agent_strategy/: index.html
strategy/security_operations_ai_strategy/: index.html
strategy/technical_support_agent_strategy/: index.html
temporal-adapter/: Dockerfile  go.mod  go.sum
temporal-adapter/deploy/: deployment.yaml
(+27 files in other folders)
