# File: engine/Cargo.toml
# Purpose: Defines the Rust workspace for Kaigents engine crates and shared dependency versions.
# Product/business importance: Provides the build and dependency foundation for the core runtime and CLI used by Kaigents.
#
# Copyright (c) 2026 John K Johansen
# License: MIT (see LICENSE)

[workspace]
members = [
    "crates/kaigents-core",
    "crates/kaigents-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
