[package]
name = "kaigents-cli"
version = "1.0.0"
edition = "2021"

[features]
default = []
rethinkdb = ["kaigents-core/rethinkdb"]
s3 = ["kaigents-core/s3"]

[[bin]]
name = "kaigents"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tiny_http = { workspace = true }
kaigents-core = { path = "../kaigents-core" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde_yaml = "0.9"
