# File: engine/crates/kaigents-core/Cargo.toml
# Purpose: Declares the kaigents-core crate package metadata, features, and dependencies.
# Product/business importance: Defines the core runtime library that powers Kaigents execution, model access, and tool orchestration.
#
# Copyright (c) 2026 John K Johansen
# License: MIT (see LICENSE)

[package]
name = "kaigents-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
rethinkdb = ["dep:unreql"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types", "dep:http"]

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
reqwest = { workspace = true }
futures-util = "0.3"
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kube = { version = "0.96", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"
unreql = { version = "0.2.1", optional = true }
